# classic-yr

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SETUP.md  compliance.md  instructions.txt  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
chats/: log.md
src/classic_yr/: __init__.py  fetch.py  plot.py
src/classic_yr/resources/: documentation.html
tests/: __init__.py  test_version.py
